--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,17 @@
+@import "tailwindcss";
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Source Sans Pro", Arial, sans-serif;
+      font-stretch: 100%;
+    font-style: normal;
 }
 
 body {
   /* background-color: #101010; */
   color: #fff;
+   
 }
 /* .page {
   display: grid;
