--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -31,7 +31,7 @@
     position: relative;
     /* top: 140px; */
     background-color: #fff;
-    color: #9eeaf9 ;
+    color: #235ea7 ;
     font-size: 1.3em;
     display: inline-block;
     word-wrap: break-word;
@@ -56,22 +56,34 @@ li a {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 991px) {
     .section-footer {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 20px;
+        display: block;
+        padding: 0 20px;
+        box-sizing: border-box;
+        width: 100%;
+        padding-bottom: 40px;
+        padding-top: 40px;
+    }
+    .section-footer h3 {
+        font-size: 20.36px;
+    }
+    .section-footer > div {
+        margin-bottom: 40px;
     }
     .one img {
-        width: 110px;
-        height: 80px;
+        display: none;
     }
     .one button {
-        width: 205px;
-        font-size: 0.8rem;
+        /* width: 205px; */
+        font-size: 1.3em;
+        font-weight: 700;
+        padding: 8px 16px;
     }
     ul li {
         font-size: 0.8em;
+    }
+    li a {
+        font-size: 17.28px;
     }
 }
