--- a/src/app/movies/movie_one.css
+++ b/src/app/movies/movie_one.css
@@ -15,7 +15,7 @@
 }
 
 
-.movie-list {
+.movi-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(192px, 1fr));
     gap: 24px;
@@ -23,7 +23,7 @@
 }
 
 
-.movie-card {
+.movi-card {
     width: 192px;
     background: #ffffff;
     border-radius: 8px;
@@ -36,32 +36,32 @@
     overflow: visible;
 }
 
-/* .movie-card:hover {
+/* .movi-card:hover {
   transform: scale(1.03);
   cursor: pointer;
 } */
 
 
-.movie-image-container {
+.movi-image-container {
     position: relative;
     width: 100%;
     height: 291px;
     overflow: hidden;
 }
 
-.movie-image-container img {
+.movi-image-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
-.movie-image-container:hover {
+.movi-image-container:hover {
     cursor: pointer;
 }
 
 
-.vote-badge {
+.vot-badge {
     position: absolute;
     bottom: -18px;
     bottom: -12px;
@@ -83,7 +83,7 @@
 
 
 
-.movie_info {
+.movi_info {
     padding: 12px;
     display: flex;
     flex-direction: column;
@@ -94,53 +94,53 @@
 }
 
 
-.movie-title {
+.movi-title {
     font-weight: bold;
     font-size: 14px;
     margin: 4px 0;
     color: #333;
 }
 
-.movie-title:hover {
+.movi-title:hover {
     color: #24cba4;
     cursor: pointer;
 }
-.movie-detail {
+.movi-detail {
     display: none;
     font-family: "Source Sans Pro", Arial, sans-serif;
 
 }
 
 
-.movie-date {
+.movi-date {
     font-size: 13px;
     color: rgba(0, 0, 0, 0.6);
     margin: 0;
 }
 
 @media screen and (max-width: 958px) {
-    .movie-list {
+    .movi-list {
         display: flex;
         flex-direction: column;
     }
-    .movie-card {
+    .movi-card {
         display: flex;
         flex-direction: row;
         height: 141px;
         width: 100%
     }
-    .movie-image-container {
+    .movi-image-container {
         height: 141px;
         width: 94px;
     }
-    .vote-badge {
+    .vot-badge {
         display: none;
     }
-    .movie_info {
+    .movi_info {
         height: 141px;
         width: 100%;
     }
-    .movie-detail {
+    .movi-detail {
         display: flex;
         flex-wrap: wrap;
         margin-top: 8px;
@@ -148,5 +148,6 @@
         color: #000000;
         font-size: 14.4px;
         font-family: "Source Sans Pro", Arial, sans-serif;
+        /* overflow: hidden; */
     }
 }
