--- a/src/app/people/people.css
+++ b/src/app/people/people.css
@@ -1,3 +1,24 @@
+/* .main-peoples {
+  min-height: 100vh;
+  width: 100%;
+  background-color: white;
+  position: relative;
+}
+
+.main-peoples::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+  background-image:
+    linear-gradient(to right, rgba(229, 231, 235, 0.8) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(229, 231, 235, 0.8) 1px, transparent 1px),
+    radial-gradient(circle 500px at 20% 80%, rgba(139, 92, 246, 0.3), transparent),
+    radial-gradient(circle 500px at 80% 20%, rgba(59, 130, 246, 0.3), transparent);
+  background-size: 48px 48px, 48px 48px, 100% 100%, 100% 100%;
+} */
+
+
 .main-peoples {
   width: 100%;
   padding: 20px 30px;
