--- a/src/app/movies/[id]/movies.css
+++ b/src/app/movies/[id]/movies.css
@@ -3,8 +3,14 @@
     font-stretch: 100%;
     font-style: normal;
 }
+.june {
+    /* margin: 40px auto;
+    max-width: 1300px;
+    justify-content: center;
+    display: flex;
+    align-items: center; */
+}
 .im-back {
-    position: relative;
     color: #fff;
     display: flex;
     flex-direction: row;
@@ -13,7 +19,8 @@
     background-repeat: no-repeat;
     padding: 20px;
     display: flex;
-    /* align-items: center; */
+    justify-content: center;
+    align-items: center;
     background-image:  linear-gradient(to right, rgba(178.5, 199.5, 178.5, 1) 20%, rgba(178.5, 199.5, 178.5, 0) 50%);
 }
 
@@ -36,10 +43,10 @@
 }
 
 .tv-show-details {
-    font-size: 32.5px;
+    /* font-size: 32.5px; */
     color: #ffffff;
     z-index: 2;
-    padding-right: 40px;
+    /* padding-right: 40px; */
     width: 60%;
 }
 .tv-show-details h1 {
@@ -250,7 +257,11 @@
     border-bottom: none
 }
 .series-info {
-    padding: 30px 40px;
+    /* padding: 30px 0px;
+    max-width: 1300px; */
+
+    margin: 40px auto;
+    max-width: 1300px;
 }
 
 .series-info h3 {
@@ -309,11 +320,6 @@
     font-weight: 500;
     padding: 0 10px;
 }
-.rec {
-    padding: 30px 40px;
-    display: flex;
-    flex-direction: column;
-}
 .sho {
     scroll-behavior: smooth;
     flex-direction: row;
@@ -322,7 +328,122 @@
     overflow-x: auto;
 }
 .sho::-webkit-scrollbar {
-  display: none; /* optional: hide scrollbar */
+  display: none; 
+}
+
+/* media */
+
+.media {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    margin: 40px auto;
+    max-width: 1300px;
+}
+.media-tab h3 {
+    /* padding-left: 40px; */
+    color: #000;
+    font-size: 22.5px;
+}
+nav {
+    flex-wrap: wrap;
+    /* margin-bottom: 20px; */
+}
+
+.media-tab {
+    display: flex;
+    gap: 20px;
+    justify-content:flex-start;
+    text-align: center;
+}
+
+.media-tab nav {
+    display: flex;
+    gap: 15px;
+}
+
+.media-tab button {
+    background: none;
+    border: none;
+    font-size: 17.6px;
+    cursor: pointer;
+    padding-bottom: 5px;
+    font-weight: 600;
+}
+
+.media-tab button.active {
+    border-bottom: 3px solid #000;
+    font-weight: bold;
+}
+.media-content {
+    /* padding-left: 40px; */
+}
+
+.media-images {
+    display: flex;
+    gap: 10px;
+    overflow-x: auto;
+    margin-top: 15px;
+    padding-bottom: 10px;
+}
+
+.media-images {
+    /* width: 165px; */
+    border-radius: 5px;
+    object-fit: cover;
+    scroll-behavior: smooth;
+    overflow-x: auto;
+}
+.media-images::-webkit-scrollbar {
+    display: none; 
+}
+
+.media-videos {
+    border: none;
+    border-radius: 5px;
+    display: flex;
+    scroll-behavior: smooth;
+    flex-direction: row;
+    overflow: hidden;
+    overflow-x: auto;
+}
+.media-videos::-webkit-scrollbar {
+    display: none; 
+}
+.video-thumb {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+.play-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3rem; /* adjust size */
+    color: white;
+    opacity: 0.8;
+    pointer-events: none;
+}
+.video-thumb:hover .play-icon {
+  opacity: 1;
+  color: #ffffff;
+}
+.video-thumb img {
+    display: flex;
+    flex-direction: row;
+}
+
+
+/*  */
+.rec {
+    /* margin: 40px auto; */
+    max-width: 1300px;
+    /* padding: 30px 40px; */
+    display: flex;
+    flex-direction: column;
+    margin: 40px auto;
+    max-width: 1300px;
 }
 .rec h3 {
     margin: 0 0 20px;
@@ -342,7 +463,7 @@
     display: flex;
     flex-direction: column;
     margin-right: 10px;
-    width: 250px;
+    width: 300px;
     height: auto;
     position: relative;
 }
@@ -365,7 +486,7 @@
     font-size: 14px;
 }
 .air-date-overlay {
-    position: absolute;
+   position: absolute;
     bottom: 33px;
     left: 0;
     right: 0;
@@ -378,6 +499,8 @@
     opacity: 0;
     transition: opacity 0.3s ease;
     display: inline-block;
+    
+
 
 }
 .mendation:hover .air-date-overlay {
@@ -447,6 +570,52 @@
 .modal-close-btn:hover {
   color: #ff4d4d;
 }
+/* image gallery */
+
+.moda-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.moda-content {
+  padding: 10px;
+  border-radius: 10px;
+  max-width: 500px;  
+  max-height: 500px;  
+  width: 90%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.moda-content img,
+.moda-content .image-gallery {
+  max-width: 100%;
+  max-height: 80%;
+  border-radius: 10px;
+  object-fit: contain;
+}
+
+.clos-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background: transparent;
+  border: none;
+  color: red;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
 
 
 
@@ -484,7 +653,7 @@
         padding: 16px 20px;
         z-index: 4;
         height: 70px;
-        font-size: 38.5px;
+        font-size: 27.5px;
     }    
     .user-vibe {
         display: flex;
@@ -552,4 +721,30 @@
     }
     
     
+}
+@media screen and (max-width: 650px) {
+    .tv-show-details h1 {
+        font-size: 24px;
+    }   
+}  
+@media screen and (max-width: 500px)  {
+    .tv-show-details h1 {
+        font-size: 24px;
+    }
+}
+@media screen and (max-width: 425px)  {
+    .tv-show-details h1 {
+        font-size: 22px;
+    }
+    .tv-show-backdrop {
+        width: 166.2px;
+        height: 224px;
+        margin-top: 8px;
+    }
+    .im-back {
+        background-size: contain;
+        background-position: top;
+        
+    }
+
 }
