--- a/src/app/movies/movie_one.css
+++ b/src/app/movies/movie_one.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
     font-family: "Source Sans Pro", Arial, sans-serif;
 }
+.main {
+    margin: 40px auto;
+    max-width: 1300px;
+}
 .pop-header {
     padding: 30px 40px;
 }
