--- a/src/app/tvShows/tv.css
+++ b/src/app/tvShows/tv.css
@@ -2,8 +2,12 @@
     box-sizing: border-box;
     font-family: "Source Sans Pro", Arial, sans-serif;
 }
+.main-tv {
+    margin: 40px auto;
+    max-width: 1300px;
+}
 .pop-tv {
-    padding: 30px 40px;
+    /* padding: 30px 40px; */
 }
 
 .poptv {
@@ -19,7 +23,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(192px, 1fr));
     gap: 24px;
-    padding: 20px 40px;
+    padding: 20px 0px;
 }
 
 
