--- a/src/components/join/join.css
+++ b/src/components/join/join.css
@@ -1,11 +1,17 @@
 .join {
-    padding: 10px 40px;
-    margin-top: 20px;
+    padding: 0px 40px;
+    /* margin-top: 20px;  */
     background-image: url(../../../public/lMnoYqPIAVL0YaLP5YjRy7iwaYv.webp);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    /* margin: 40px auto;
+    width: 100%; */
 
+}
+.on-join {
+    margin: 40px auto;
+    max-width: 1300px;
 }
 
 .join-header {
@@ -24,6 +30,7 @@
     color: #fff;
     font-size: 1.2em;
     line-height: 1.4;
+    /* width: 800px; */
 
 }
 
