--- a/src/components/search_bar/search_bar.css
+++ b/src/components/search_bar/search_bar.css
@@ -5,6 +5,8 @@
     width: 100%;
     height: 300px;
     padding: 0 40px;
+    /* margin: 40px auto; */
+    /* max-width: 1300px; */
 }
 .form_id {
     margin-top: 30px;
@@ -72,7 +74,9 @@ input {
 }
 .search-wrapper {
     position: relative;
-    /* width: 100%; */
+    margin: 40px auto;
+    max-width: 1300px;
+    
 }
 
 .dropdown {
@@ -101,7 +105,40 @@ input {
 .dropdown li:hover {
     background-color: #f2f2f2;
 }
+/* new */
 
+.input-container {
+  position: relative;
+  width: 100%;
+  /* max-width: 500px; */
+}
+
+.input-container input {
+  width: 100%;
+  padding: 10px 40px 10px 12px; /* leave space for the button */
+  border: 1px solid #ccc;
+  border-radius: 13px;
+  font-size: 16px;
+}
+
+.search-btn {
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    height: 46px;
+    transform: translateY(-50%);
+    background: green;
+    border: none;
+    padding: 10px 26px;
+    border-radius: 30px;
+    color: white;
+    cursor: pointer;
+    margin-right: -15px;
+}
+
+.search-btn:hover {
+  background: #2563eb;
+}
 
 
 @media screen and (max-width: 768px) {
