--- a/src/components/whats_popular/whats_popular.css
+++ b/src/components/whats_popular/whats_popular.css
@@ -133,7 +133,9 @@
 
 
 .popus {
-    padding: 0 40px;
+    margin: 40px auto;
+    max-width: 1300px;
+    
 }
 
 .movie-list {
@@ -141,12 +143,13 @@
     padding: 0 20px;
     display: flex;
     overflow-x: auto;
-    margin: 0 40px;
+    /* margin: 0 40px; */
 }
 
 
 .movie-list::-webkit-scrollbar {
   height: 8px;
+  display: none;
 }
 
 .movie-list::-webkit-scrollbar-thumb {
