--- a/src/app/movies/[id]/movies.css
+++ b/src/app/movies/[id]/movies.css
@@ -26,7 +26,7 @@
 
 .im-back::before {
   content: "";
-  position: absolute;
+  /* position: absolute; */
   inset: 0;
   z-index: 1;
 }
@@ -259,9 +259,9 @@
 .series-info {
     /* padding: 30px 0px;
     max-width: 1300px; */
-
+    padding-left: 20px;
     margin: 40px auto;
-    max-width: 1300px;
+    max-width: 1200px;
 }
 
 .series-info h3 {
@@ -269,6 +269,7 @@
     font-size: 1.4em;
     margin-bottom: 20px;
     color: #000000;
+    padding-left: 10px;
 }
 .people-scroller {
     display: flex;
@@ -326,6 +327,7 @@
     gap: 10px;
     display: flex;
     overflow-x: auto;
+    padding-left: 10px;
 }
 .sho::-webkit-scrollbar {
   display: none; 
@@ -338,7 +340,7 @@
     display: flex;
     flex-direction: column;
     margin: 40px auto;
-    max-width: 1300px;
+    max-width: 1200px;
 }
 .media-tab h3 {
     /* padding-left: 40px; */
@@ -438,18 +440,19 @@ nav {
 /*  */
 .rec {
     /* margin: 40px auto; */
-    max-width: 1300px;
-    /* padding: 30px 40px; */
+    max-width: 1200px;
+    padding-left: 20px;
     display: flex;
     flex-direction: column;
     margin: 40px auto;
-    max-width: 1300px;
 }
 .rec h3 {
     margin: 0 0 20px;
     color: #000000;
     font-size: 22.5px;
     cursor: pointer;
+    padding-left: 10px;
+    
 
 }
 .two-rec {
@@ -466,6 +469,7 @@ nav {
     width: 300px;
     height: auto;
     position: relative;
+    padding-left: ;
 }
 .mendation img {
     width: 250px;
