--- a/src/app/search/searp.css
+++ b/src/app/search/searp.css
@@ -12,7 +12,7 @@
     flex-direction: row;
     align-items: start;
     margin: 40px auto;
-    max-width: 1300px;
+    max-width: 1200px;
     gap: 20px;
     /* justify-content: center; */
 }
@@ -55,6 +55,7 @@
 .result-card {
     display: flex;
     flex-direction: row;
+    /* width: 100%; */
 }
 .result-card h4 {
     color: #000;
@@ -70,6 +71,7 @@
     flex-direction: column;
     padding: 10px 15px;
     flex-wrap: wrap;
+    width: 100%;
     align-content: center;
     border: 1px solid #ccc;
     box-shadow: 0 2px 8px rgba(0, 0, 0, .1);
