--- a/src/app/tvShows/[id]/tvshow[id].css
+++ b/src/app/tvShows/[id]/tvshow[id].css
@@ -14,12 +14,12 @@
     padding: 20px;
     display: flex;
     align-items: center;
-    background-image:  linear-gradient(to right, rgba(178.5, 199.5, 178.5, 1) 20%, rgba(178.5, 199.5, 178.5, 0) 50%);
+    /* background-image:  linear-gradient(to right, rgba(178.5, 199.5, 178.5, 1) 20%, rgba(178.5, 199.5, 178.5, 0) 50%); */
 }
 
 .img-back::before {
   content: "";
-  position: absolute;
+  /* position: absolute; */
   inset: 0;
   z-index: 1;
 }
@@ -409,7 +409,7 @@ nav {
 /* series-cast */
 .rec {
     margin: 40px auto;
-    max-width: 1300px;
+    max-width: 1200px;
 }
 
 .rec h3 {
