--- a/src/components/join/join.css
+++ b/src/components/join/join.css
@@ -65,4 +65,8 @@ span {
     button {
         justify-content: center;
     }
+    button {
+        margin-top: 6px;
+        margin-bottom: 15px;
+    }
 }
