--- a/src/components/search_bar/search_bar.css
+++ b/src/components/search_bar/search_bar.css
@@ -114,11 +114,14 @@ input {
 }
 
 .input-container input {
-  width: 100%;
-  padding: 10px 40px 10px 12px; /* leave space for the button */
-  border: 1px solid #ccc;
-  border-radius: 13px;
-  font-size: 16px;
+    width: 100%;
+    padding: 10px 40px 10px 12px; /* leave space for the button */
+    border: 1px solid #ccc;
+    border-radius: 13px;
+    font-size: 16px;
+}
+.input-container input::placeholder {
+    content: "Search for a movie, TV show, person...";
 }
 
 .search-btn {
@@ -157,5 +160,26 @@ input {
         font-size: 2em;
         font-weight: 600;
         margin: 0;
+    }
+    /* .input-container input::placeholder {
+        opacity: 0;
+    } */
+    .input-container input::placeholder {
+        content: "Search...";
+    }
+}
+@media screen and (max-width: 430px) {
+    .input-container {
+        margin-bottom: 12px;
+    }
+    .search_bar h3 {
+        line-height: 1;
+        max-width: 100%;
+    }
+    .input-container input::placeholder {
+        content: "Search..";
+    }
+    .search-btn {
+        top: 38%;
     }
 }
