--- a/src/app/tvShows/tv.css
+++ b/src/app/tvShows/tv.css
@@ -128,6 +128,7 @@
         flex-direction: row;
         height: 141px;
         width: 100%
+        
     }
     .tv-image-container {
         height: 141px;
@@ -151,7 +152,6 @@
         color: #000000;
         font-size: 14.4px;
         font-family: "Source Sans Pro", Arial, sans-serif;
-        /* overflow: hidden; */
     }
 }
 @media screen and (max-width: 500px) {
@@ -163,5 +163,8 @@
     }
     .main-tv {
         padding: 0 20px;
+    }
+    .tv-card {
+        overflow: hidden;   
     }
 }
