--- a/src/app/people/people.css
+++ b/src/app/people/people.css
@@ -27,7 +27,7 @@
   
 }
 .people-header {
-    /* margin-top: 64px; */
+    padding-left: 20px;
 }
 
 .ple {
@@ -38,6 +38,7 @@
 }
 
 .people-list {
+  padding: 0 20px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 40px;
