--- a/src/app/search/searp.css
+++ b/src/app/search/searp.css
@@ -7,7 +7,7 @@
     font-style: normal;
 }
 .both-container {
-    padding: 20px 40px;
+    
     display: flex;
     flex-direction: row;
     align-items: start;
@@ -20,6 +20,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    padding: 20px 40px;
 }
 .search-tabs h3 {
     display: flex;
@@ -43,6 +44,7 @@
 .search-tabs {
     display: flex;
     flex-direction: column;
+    width: 44%;
 }
 .search-tabs button {
     display: inline-flex;
@@ -55,12 +57,16 @@
 .result-card {
     display: flex;
     flex-direction: row;
+    border-radius: 16px;
     /* width: 100%; */
 }
 .result-card h4 {
     color: #000;
     font-size: 24px;
     font-family: "Source Sans Pro", Arial, sans-serif;
+}
+.result-card img {
+    border-radius: 10px 0px 0px 10px;
 }
 .bothered {
     width: 90px;
@@ -76,6 +82,7 @@
     border: 1px solid #ccc;
     box-shadow: 0 2px 8px rgba(0, 0, 0, .1);
     background-color: #fff;
+    border-radius: 0px 10px 10px 0px;
 }
 .tails h2 {
     display: flex;
@@ -119,4 +126,61 @@
 a {
     text-decoration: none;
     color: inherit;
+}
+.overrview {
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* show 3 lines */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 600px) {
+  .overrview {
+    -webkit-line-clamp: 2; /* only 2 lines on small screens */
+  }
+}
+@media screen and (max-width: 768px) {
+    .search-tabs {
+        width: 100%;
+    }
+    .search-tabs h3 {
+        width: 100%;
+        height: 44px;
+        font-size: 19px;
+        font-weight: 600;
+    }
+    .result-card {
+        border-radius: 16px;
+    }
+    .search-tabs {
+        display: flex;
+        flex-direction: column;
+    }
+    .search-tabs button {
+        border: none;
+    }
+    .both-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .all-btns {
+        display: flex;
+        flex-direction: row;
+        height: 56px;
+        /* width: 100%; */
+    }
+}
+@media screen and (max-width: 450px) {
+    button {
+        font-size: 16px;
+        padding: 14px 0;
+    }
+    .tails h2 {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;   /* show max 2 lines */
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        cursor: pointer;
+    }
 }
