--- a/src/app/tvShows/tv.css
+++ b/src/app/tvShows/tv.css
@@ -157,6 +157,7 @@
 @media screen and (max-width: 500px) {
     .poptv {
         padding: 0 10px;
+        margin-bottom: 15px;
     }
     .tv-list {
         padding: 0 10px;
