--- a/src/app/movies/[id]/movies.css
+++ b/src/app/movies/[id]/movies.css
@@ -703,7 +703,7 @@ nav {
     .menu-love-mark {
         
         position: fixed;
-        bottom: 0;
+        bottom: -19px;
         left: 0;
         width: 100%;
         background-color: #032541cc;
@@ -752,6 +752,9 @@ nav {
     }
     .cast {
         height: 285px;
+    }
+    .con {
+        display: none;
     }
 
 }
