--- a/src/app/tvShows/[id]/tvshow[id].css
+++ b/src/app/tvShows/[id]/tvshow[id].css
@@ -313,6 +313,7 @@
     padding: 30px 40px;
     display: flex;
     flex-direction: column;
+    cursor: pointer;
 }
 .sho {
     scroll-behavior: smooth;
@@ -320,6 +321,7 @@
     gap: 10px;
     display: flex;
     overflow-x: auto;
+    cursor: pointer;
 }
 .sho::-webkit-scrollbar {
   display: none;
@@ -368,6 +370,7 @@ nav {
 }
 .media-content {
     padding-left: 40px;
+    
 }
 
 .media-images {
@@ -379,11 +382,11 @@ nav {
 }
 
 .media-images {
-  /* width: 165px; */
   border-radius: 5px;
   object-fit: cover;
   scroll-behavior: smooth;
   overflow-x: auto;
+  cursor: pointer;
 }
 .media-images::-webkit-scrollbar {
   display: none; /* optional: hide scrollbar */
@@ -397,6 +400,7 @@ nav {
   flex-direction: row;
   overflow: hidden;
   overflow-x: auto;
+  cursor: pointer;
 }
 .media-videos::-webkit-scrollbar {
   display: none; 
