--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -11,7 +11,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     flex-wrap: wrap;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-around;
     display: flex;
     flex-direction: row;
@@ -26,6 +26,12 @@
     height: 94px;
     width: 130px;
     margin-left: 50px;
+}
+.two h3,
+.three h3,
+.four h3,
+.five h3 {
+    margin-bottom: 15px;
 }
 .one button {
     position: relative;
@@ -49,6 +55,7 @@ ul li {
     list-style: none;
     color: #fff;
     font-size: 1em;
+    line-height: 1.5;
 }
 li a {
     text-decoration: none;
@@ -65,6 +72,10 @@ li a {
         padding-bottom: 40px;
         padding-top: 40px;
     }
+    h3 {
+        margin-bottom: 15px;
+        color: #fff;
+    }
     .section-footer h3 {
         font-size: 20.36px;
     }
@@ -75,7 +86,6 @@ li a {
         display: none;
     }
     .one button {
-        /* width: 205px; */
         font-size: 1.3em;
         font-weight: 700;
         padding: 8px 16px;
