--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -26,8 +26,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
-  /* width: 489px; */
-  /* height: 56px; */
+  
 }
 
 .navbar a {
@@ -41,6 +40,7 @@
 }
 .middle {
   display: none;
+  margin-bottom: 10px;
 }
 .navbar a:hover {
   text-decoration: none;
@@ -166,6 +166,7 @@
       display: block;
       align-items: center;
       justify-content: center;
+      /* margin-bottom: 10px; */
     }
     .others {
       display: none;
