--- a/src/components/latest_thriller/latest_thriller.css
+++ b/src/components/latest_thriller/latest_thriller.css
@@ -252,7 +252,9 @@
   }
 
   .opera-movie-image-container img {
-    height: 100px;
+    height: 150px;
+    width: 300px;
+
   }
 
   .opera-play-icon {
