--- a/src/app/search/searp.css
+++ b/src/app/search/searp.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: row;
     align-items: start;
-    margin: 40px auto;
+    margin: 0px auto;
     max-width: 1200px;
     gap: 20px;
     /* justify-content: center; */
@@ -110,7 +110,6 @@
     color: #000000;
     font-family: "Source Sans Pro", Arial, sans-serif;
     font-size: 16px;
-    /* width: 100%; */
 
 }
 .known-for {
@@ -167,7 +166,6 @@ a {
         display: flex;
         flex-direction: row;
         height: 56px;
-        /* width: 100%; */
     }
 }
 @media screen and (max-width: 450px) {
@@ -177,7 +175,7 @@ a {
     }
     .tails h2 {
         display: -webkit-box;
-        -webkit-line-clamp: 2;   /* show max 2 lines */
+        -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
