--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -96,6 +96,31 @@
     /* justify-content: center; */
     align-items: center;
 }
+.sign-out {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.sign-out-btn {
+    padding: 6px 12px;
+    background-color: inherit;
+    border-radius: 12px;
+    border: 1px solid #fff;
+    color: white;
+    cursor: pointer;
+    font-weight: 600;
+}
+.mobile-signout-btn {
+    padding: 8px 16px;
+    background-color: inherit;
+    border-radius: 12px;
+    border: 1px solid #fff;
+    color: white;
+    cursor: pointer;
+    font-weight: 600;
+    width: 100%;
+    margin-top: 10px;
+}
 
 
 @media  (max-width: 958px) {
@@ -104,7 +129,8 @@
     }
     .navbar {
         justify-content: space-between;
-        padding: 10px;
+        align-items: center;
+        padding: 0px 20px;
         display: flex;
         flex-direction: row-reverse;
       }
@@ -160,13 +186,13 @@
       display: block;
       color: #fff;
       font-size:  25px;
-      width: 86px;
+      /* width: 86px; */
     }
     .middle {
       display: block;
       align-items: center;
       justify-content: center;
-      /* margin-bottom: 10px; */
+      /* margin-left: 35px; */
     }
     .others {
       display: none;
