--- a/src/components/trending/trending.css
+++ b/src/components/trending/trending.css
@@ -29,7 +29,7 @@
 }
 
 .trends-tab {
-  padding: 8px 16px;
+  /* padding: 8px 16px; */
   background: white;
   border: none;
   cursor: pointer;
@@ -123,6 +123,7 @@
     font-weight: 600;
     width: 130px;
     cursor: pointer;
+    font-size: 16px;
   }
   
 
@@ -137,7 +138,7 @@
   }
 
   .dropdown-item {
-    padding: 8px 12px;
+    padding: 3px 12px;
     background: white;
     border: none;
     cursor: pointer;
