--- a/src/components/latest_thriller/latest_thriller.css
+++ b/src/components/latest_thriller/latest_thriller.css
@@ -292,15 +292,12 @@
   }
   .mobile-tabs {
      display: block;
-      width: 50%; 
+      /* width: 50%;  */
     
     }
 
   .opera-dropdown-toggle {
-    background: linear-gradient(
-     to right,
-    #1ed5a9 0%,
-    #01b4a7 100%);
+    background: #1f245a;
     color: #fff;
     border: none;
     align-items: center;
@@ -316,17 +313,18 @@
 
   .opera-dropdown-menu {
     margin-top: 8px;
-    background: #fff;
+    background: #13faeb;
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.15);
     display: flex;
     flex-direction: column;
     overflow: hidden;
+     border: 1px solid rgba(var(--tmdbLightGreen), 1);
   }
 
   .opera-dropdown-item {
     border: none;
-    background: #fff;
+    background: #13faeb;
     text-align: left;
     font-weight: 500;
     cursor: pointer;
@@ -334,7 +332,7 @@
   }
 
   .opera-dropdown-item:hover {
-    background: #f2f2f2;
+    background: #1f245a;
   }
 
   .opera-active {
@@ -343,6 +341,6 @@
     #1ed5a9 0%,
     #01b4a7 100%
 );
-    color: #fff !important;
+    color: #1f245a !important;
   }
 }
