--- a/src/app/tvShows/tv.css
+++ b/src/app/tvShows/tv.css
@@ -138,6 +138,7 @@
     .tv_info {
         height: 141px;
         width: 100%;
+        padding: 7px 12px 12px;
     }
     .poptv {
         padding: 0 20px;
