--- a/src/app/tvShows/[id]/tvshow[id].css
+++ b/src/app/tvShows/[id]/tvshow[id].css
@@ -389,7 +389,7 @@ nav {
   cursor: pointer;
 }
 .media-images::-webkit-scrollbar {
-  display: none; /* optional: hide scrollbar */
+  display: none; 
 }
 
 .media-videos {
@@ -687,8 +687,8 @@ nav {
         color: #000000;
     }
     .media-images {
-        width: 250px;
-        height: 141px;
+        /* width: 250px; */
+        /* height: 141px; */
     }
     
     
