--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -23,7 +23,7 @@ img {
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
-  background: #fff;
+  /* background: #fff; */
 }
 
 .board-header {
